# lkirk-xmonad

./: ChangeLog.md  Dockerfile  README.md  lkirk-xmonad.cabal  package.yaml  stack.yaml
.github/workflows/: build.yml
src/: xmonad.hs
