cabal-version:  3.0
name:           lkirk-xmonad
version:        0.1.0.0
license:        BSD3
license-file:   LICENSE
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/lkirk/lkirk-xmonad

executable xmonad
  main-is: xmonad.hs
  hs-source-dirs: src
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      X11
    , base >=4.7 && <5
    , containers
    , xmobar
    , xmonad
    , xmonad-contrib
  default-language: Haskell2010
